# nango_api_2209

./: README.md
ai_api_2209/: Cargo.toml
ai_api_2209/db/: 1_create_tables.sql  2_insert_seed.sql  ai_db.db
ai_api_2209/input/: study_qa1.csv
ai_api_2209/model/: bccwj-luw-small.model.zst
ai_api_2209/output/: model_qa1.csv  word_list.csv
ai_api_2209/src/: main.rs
ai_api_2209/src/nlp/: tf_idf.rs
