[package]
name = "ai_api_2209"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
lambda_runtime = "0.5.1"
serde_json = "1.0.82"
tokio = "1.20.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"]}
vaporetto = "0.5.1"
vaporetto_tantivy = "0.5.1"
vaporetto_rules = "0.5.1"
zstd = "0.11"
chrono = "0.4.22"
rusqlite = { version = "0.28.0", features = ["chrono"] }
